# site-crawler-framework

./: README.md  main.py  pyproject.toml
docs/: architecture.md  configuration.md  extending.md  why-no-api.md
src/config/: crawler_config.yaml  sites_to_crawl.yaml
src/core/: __init__.py  base_crawler.py  content_handler.py  exceptions.py  models.py  site_type.py
src/crawlers/: __init__.py  flask_crawler.py  generic_crawler.py  manager.py  pdf_crawler.py  resolver.py  sphinx_crawler.py  wordpress_crawler.py
src/detectors/: __init__.py  detector.py
src/detectors/strategies/: __init__.py  flask_detector.py  pdf_detector.py  sphinx_detector.py  wordpress_detector.py
src/modules/: __init__.py  config_loader.py  content_extractor.py  file_handler.py  logger.py  request_handler.py  url_utils.py
tests/: __init__.py  conftest.py  test_detectors.py  test_flask_crawler.py  test_pdf_crawler.py
